# devBlog-backend

./: pyproject.toml  render.yaml
config/: settings.py  urls.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
